testsuite/tests/linear/should_fail/LinearPatSyn.stderr

LinearPatSyn.hs:14:4: error:
    • Couldn't match type ‘'Omega’ with ‘'One’
        arising from a non-linear pattern
    • In the pattern: P y x
      In an equation for ‘s’: s (P y x) = (y, x)
